--- a/components/Reloading/style.css
+++ b/components/Reloading/style.css
@@ -137,3 +137,10 @@
   animation: fade-down-large 1.5s ease-in-out 1;
   animation-delay: 1.5s;
 }
+
+
+@keyframes disappear {
+  0%,100% {
+    display: none;
+  }
+}
