--- a/components/sections/home/Introduction/style.css
+++ b/components/sections/home/Introduction/style.css
@@ -1,6 +1,11 @@
 .background_blur_left_to_right {
     background-image: linear-gradient(to right, #F8FCFF, #ffffff00);
 }
+
 .background_blur_right_to_left {
     background-image: linear-gradient(to left, #F8FCFF, #ffffff00);
+}
+
+.background_blur_top_to_bottom {
+    background-image: linear-gradient(to bottom, #F8FCFF, #ffffff00);
 }
